src/snapshots/brokertui__ui__tests__browser_with_console.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 24)"
---
 BrokerTUI   prod (db0)  · browser                                           12:34:56 UTC
 db0  match=*  2 keys  sort:name↑  group:off
┌ Server ────────────────────────────────────────────────────────────────────────────────┐
│Loading server stats…                                                                   │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ Keys ───────────────────────────────────┐┌ Value ──────────────────────────────────────┐
│  Key            Type   TTL      Size    ││loading…                                     │
│▶ session:abc    hash   2m 0s    128 B   ││                                             │
│  user:1         string 2m 0s    128 B   ││                                             │
│                                         ││                                             │
│                                         ││                                             │
│                                         ││                                             │
│                                         ││                                             │
│                                         ││                                             │
└─────────────────────────────────────────┘└─────────────────────────────────────────────┘
┌ Console — prod (read-only) ────────────────────────────────────────────────────────────┐
│                                                                                        │
│❯ SET k v                                                                               │
│`SET` is not on the read-only allowlist                                                 │
│                                                                                        │
│❯                                                                                       │
└────────────────────────────────────────────────────────────────────────────────────────┘
  nav ↑↓ keys · ⏎ fold · [ ] db │ view / filter · o sort · O dir · p group │ data i cmd ·
