src/snapshots/brokertui__ui__tests__console_with_output.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 20)"
---
 BrokerTUI   prod (db0)  · console                                           12:34:56 UTC
┌ Console — prod (read-only) ────────────────────────────────────────────────────────────┐
│❯ INFO server                                                                           │
│redis_version:7.4.0                                                                     │
│uptime_in_seconds:42                                                                    │
│                                                                                        │
│❯ SET k v                                                                               │
│`SET` is not on the read-only allowlist                                                 │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│❯                                                                                       │
└────────────────────────────────────────────────────────────────────────────────────────┘
  i type · ↑↓ scroll · r clear · K keyspace ·
