src/snapshots/brokertui__ui__tests__dashboard.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 20)"
---
 BrokerTUI   prod (db0)  · dashboard                                         12:34:56 UTC
┌ Dashboard — prod ──────────────────────────────────────────────────────────────────────┐
│┌Memory────────────────────────────────────┐┌Hit ratio─────────────────────────────────┐│
││██████████1.0 MiB (peak 2.0 MiB)          ││██████████████████90.0% ██████████████    ││
│└──────────────────────────────────────────┘└──────────────────────────────────────────┘│
│Version         7.4.0                                                                   │
│Uptime          1h 1m 1s                                                                │
│Clients         7                                                                       │
│Ops/sec         120                                                                     │
│Memory used     1.0 MiB                                                                 │
│Memory peak     2.0 MiB                                                                 │
│Hits / Misses   900 / 100                                                               │
│Keys per DB     db0=42  db1=7                                                           │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
  b browser · w watch · e console · c conns ·
