src/snapshots/brokertui__ui__tests__help_overlay.snap
---
source: src/ui.rs
expression: "render_lines(&mut app, 90, 32)"
---
 BrokerTUI   no connection  · connections                                    12:34:56 UTC
┌ Connection┌ Help ──────────────────────────────────────────────────────────┐───────────┐
│           │Navigation                                                      │           │
│           │  ↑/k ↓/j move   g/G top/bottom   Ctrl-u/d page   mouse wheel sc│           │
│           │  Enter connect (Connections)    : command palette              │           │
│           │                                                                │           │
│           │Screens                                                         │           │
│           │  c connections  b browser  w realtime  R recordings            │           │
│           │                                                                │           │
│           │Browser                                                         │           │
│           │  server stats (Redis) appear in a band above the panes         │           │
│           │  the read-only console (Redis) is a band along the bottom      │           │
│           │  / filter   [ ] change DB   r refresh (keys auto-refresh)      │           │
│           │  o sort column   O direction   p group by prefix               │           │
│           │  Enter/Space fold group   z fold/unfold all                    │           │
│           │  PgUp/PgDn (or Ctrl-u/d) scroll the value pane                 │           │
│           │  t tail selected stream    s subscribe (pub/sub or stream)     │           │
│           │                                                                │           │
│           │Realtime tails                                                  │           │
│           │  s subscribe   m MONITOR   K keyspace   Tab/[ ] switch tab   x │           │
│           │  ↑↓ scroll   G follow newest   r toggle recording              │           │
│           │  spec: pubsub:ch · psub:ch.* · stream:key · keyspace[:N] · moni│           │
│           │                                                                │           │
│           │Console (read-only, Browser band)                               │           │
│           │  i type a command   Enter run   ↑↓ history   PgUp/PgDn scroll  │           │
│           │  Ctrl-L clear   writes and admin commands are refused          │           │
│           │                                                                │           │
│           │General                                                         │           │
│           │  a add connection    ? toggle help    q / Ctrl-c quit          │           │
│           │                                                                │           │
└───────────└────────────────────────────────────────────────────────────────┘───────────┘
  nav ↑↓ move │ conn Enter connect · a add │ app : palette · ? help · q quit
